style: 응답 포맷 순서 변경